--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     //compile 'com.alibaba:fastjson:1.1.68.android'
+    compile 'com.github.LRH1993:AutoFlowLayout:1.0.5'
 
 }
