--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".module_b_main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTask"/>
+        <activity android:name=".activity.AddActivity"/>
     </application>
 
 </manifest>
