--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,17 @@ android {
     dexOptions {
         javaMaxHeapSize "4g"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 allprojects {
     repositories {
@@ -31,6 +42,7 @@ allprojects {
         google()
     }
 }
+
 
 dependencies {
     //implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -46,7 +58,6 @@ dependencies {
     //implementation 'com.github.bumptech.glide:glide:4.7.1'
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    //compile 'com.alibaba:fastjson:1.1.68.android'
-    compile 'com.github.LRH1993:AutoFlowLayout:1.0.5'
-
+    implementation files('src/main/libs/fastjson-1.2.5.jar')
+    compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
 }
