--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,17 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+    sourceSets{
+        main{
+            jniLibs.srcDir 'src/main/libs'
+        }
+    }
 }
 allprojects {
     repositories {
         mavenCentral()
         google()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -55,10 +61,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    //implementation 'com.github.bumptech.glide:glide:4.7.1'
-    //annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation files('src/main/libs/fastjson-1.2.5.jar')
     compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     compile 'cn.yipianfengye.android:zxing-library:2.2'
+    implementation 'com.roger.catloadinglibrary:catloadinglibrary:1.0.4'
+    implementation 'com.github.arcadefire:nice-spinner:1.3.4'
+    implementation files('src/main/libs/BaiduLBS_Android.jar')
 }
