--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,24 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <!-- 获取CUID，用于鉴权，请求签名等 -->
+    <uses-permission android:name="com.android.launcher.permission.WRITE_SETTINGS" />
+    <!-- 这个权限用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 用于读取手机当前的状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 访问网络，网络定位需要上网 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -23,7 +41,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="pRfOwgmU0P1s5Am6OAXNej8w8UZOZAkO" />
+
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+        </service>
+
         <activity
             android:name=".activity.FlashActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -47,13 +77,23 @@
         <activity android:name=".activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleTask"/>
-        <activity android:name=".activity.AddActivity"/>
-        <activity android:name=".module_login_reg.login"/>
-        <activity android:name=".module_login_reg.reg"/>
-        <activity android:name=".activity.detailMyAddActivity"/>
-        <activity android:name=".activity.actionPersoneActivity"/>
-        <activity android:name=".activity.selectTimeActivity"/>
+
+        <activity android:name=".activity.AddActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden">
+        </activity>
+
+        <activity android:name=".module_login_reg.login"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".module_login_reg.reg"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".module_login_reg.findPW"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+        <activity android:name=".activity.DetailMyAddActivity"/>
+        <activity android:name=".activity.ActionPersoneActivity"/>
+        <activity android:name=".activity.SelectTimeActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
         <activity android:name=".activity.ShareActivity"/>
+        <activity android:name=".activity.ChangeMyActivity"/>
     </application>
 
 </manifest>
