--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ allprojects {
 
 
 dependencies {
+    androidTestCompile('com.android.support:support-annotations:27.0.1') {
+        force = true
+    }
     //implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     //noinspection GradleCompatible
